--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".features.sandwichDetails.view.SandwichDetailsActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:label="@string/details_label"
+            android:screenOrientation="portrait">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
         </activity>
     </application>
 
