--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,13 +20,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".features.sandwichDetails.view.SandwichDetailsActivity"
+        <activity
+            android:name=".features.sandwichDetails.view.SandwichDetailsActivity"
             android:label="@string/details_label"
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
+        <activity android:name=".features.ingredientsSelector.view.IngredientsSelectorActivity"></activity>
     </application>
 
 </manifest>
