--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,7 +30,11 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
-        <activity android:name=".features.ingredientsSelector.view.IngredientsSelectorActivity"></activity>
+        <activity
+            android:name=".features.ingredientsSelector.view.IngredientsSelectorActivity"
+            android:label="@string/extras_label"
+            android:screenOrientation="portrait">
+        </activity>
     </application>
 
 </manifest>
